<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundsigninresize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Enter_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email_edt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnregister"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#ADFF5722"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_signInWithGoogle"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:background="#85FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textvieworuse" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/donthave_account"
        android:textColor="#FF5722"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregister" />

    <TextView
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/register"
        android:textColor="#FF5722"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />



    <View
        android:id="@+id/divider"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:background="#9F1B1717"
        app:layout_constraintBottom_toBottomOf="@+id/textvieworuse"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="15dp"
        android:background="#9F1B1717"
        app:layout_constraintBottom_toTopOf="@+id/btn_signInWithGoogle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textvieworuse"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="158dp"
        android:text="@string/oruse"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/divider1"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_loginasguest"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#ADFF5722"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signInWithGoogle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/person"
        app:layout_constraintStart_toStartOf="@+id/btn_loginasguest"
        app:layout_constraintTop_toTopOf="@+id/btn_loginasguest" />

</androidx.constraintlayout.widget.ConstraintLayout>
