 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        tools:context=".SearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="251dp"
                android:layout_height="36dp"
                android:text="@string/search_by_all_meals"
                android:textColor="#FF9800"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_AllMeals"
                android:layout_width="355dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circularsearch">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/fav_img_mealImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/circularsearch"
                        android:padding="3dp"
                        android:src="@drawable/allmeals"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/tv_allMeals"
                        android:layout_width="156dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/all_meals"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.78"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/search_by_area"
                android:textColor="#FF9800"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_AllMeals" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_country"
                android:layout_width="355dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:background="#1AC4C4C4"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circularsearch">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView2"
                        android:layout_width="88dp"
                        android:layout_height="90dp"
                        android:layout_margin="20dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/circularsearch"
                        android:padding="3dp"
                        android:src="@drawable/country"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="156dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.78"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/search_by_ingrediant"
                android:textColor="#FF9800"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_country" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_ingrediant"
                android:layout_width="355dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:background="#1AC4C4C4"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circularsearch">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView3"
                        android:layout_width="88dp"
                        android:layout_height="82dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/circularsearch"
                        android:padding="3dp"
                        android:src="@drawable/ingridients"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/tv_Ingrediant"
                        android:layout_width="156dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/ingridient"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.78"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/search_by_category"
                android:textColor="#FF9800"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.147"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_ingrediant" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_category"
                android:layout_width="355dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:background="#1AC4C4C4"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circularsearch">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView4"
                        android:layout_width="88dp"
                        android:layout_height="76dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/circularsearch"
                        android:padding="3dp"
                        android:src="@drawable/category2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="156dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/category"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.78"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

